Conclusão do item 4.3 React Automatizando os testes em aplicações Front-end

--- a/bytebanktestes/package.json
+++ b/bytebanktestes/package.json
@@ -12,11 +12,11 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "backend": "json-server db.json -p 3001"
+    "backend": "json-server db.json -p 5000"
   },
   "eslintConfig": {
     "extends": "react-app"
